--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "haizea-llevant",
-  "version": "1.0.0",
-  "description": "Test de Haizea-Llevant digitalizado - Aplicación web para evaluación neurológica",
+  "version": "2.0.0",
+  "description": "Test de Haizea-Llevant digitalizado con análisis estadístico y gráficos - Aplicación web para evaluación neurológica",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -13,7 +13,10 @@
     "neurologia",
     "test",
     "evaluacion",
-    "pediatria"
+    "pediatria",
+    "estadisticas",
+    "percentiles",
+    "desarrollo-infantil"
   ],
   "author": "NeuropediaLab",
   "license": "MIT",
