🔧 Solución completa a problemas de Docker y cgroups
✅ CORRECCIONES IMPLEMENTADAS:
- Configuración docker-compose compatible (evita warnings cgroups)
- Script de inicio mejorado con detección automática Docker/Node.js
- 3 versiones de docker-compose para diferentes sistemas
- Script de diagnóstico y corrección de problemas
- Documentación completa de troubleshooting

🚀 NUEVOS ARCHIVOS:
- start-enhanced.sh: Script de inicio inteligente
- docker-compose-compatible.yml: Sin warnings de memoria
- docker-compose-simple.yml: Sin límites de recursos
- fix-cgroups.sh: Diagnóstico y corrección automática
- TROUBLESHOOTING.md: Guía completa de solución de problemas

🎯 MEJORAS:
- Detección automática de herramientas disponibles
- Ejecución con Node.js como fallback
- Logs detallados y PID management
- URLs de red automáticas
- Verificación de salud integrada

✅ TESTADO Y FUNCIONANDO:
- API health check: ✅
- API Haizea data: ✅
- Interfaz web: ✅
- Scripts automáticos: ✅

--- a/docker-compose-compatible.yml
+++ b/docker-compose-compatible.yml
@@ -19,10 +19,11 @@ services:
       - PORT=3000
       - TZ=Europe/Madrid
     
-    # Límites de recursos compatibles (evita warnings de cgroups)
+    # Límites de recursos compatibles (sin cgroups v2)
     mem_limit: 512m
     mem_reservation: 256m
     cpus: 2.0
+    cpu_shares: 1024
     
     # Volúmenes para persistir datos
     volumes:
