🚀 MEJORAS COMPLETAS: Gráfica Original + UI Mejorada + Análisis Robusto + Fix Portainer
✨ NUEVAS FUNCIONALIDADES:
- 📊 Nueva pestaña 'Gráfica Original' con tabla Haizea-Llevant del PDF
- 📏 Línea vertical precisa marcando edad cronológica del paciente
- 🔍 Controles de zoom y tooltips interactivos en gráfica
- 📈 Análisis estadístico completo (local + servidor)
- 📉 Tabla de percentiles detallada con interpretación automática

🎨 MEJORAS DE INTERFAZ:
- 🖥️ Cuadro de resultados ampliado (95% del ancho de pantalla)
- 🏷️ Etiqueta corregida: 'Percentil' → '% de hitos superados'
- 📱 Diseño más espacioso y aprovechamiento de márgenes
- 🎯 Todas las pestañas ahora funcionales al 100%

🔧 MEJORAS TÉCNICAS:
- 🐳 Dockerfile optimizado con permisos correctos
- 🔐 Manejo robusto de errores de permisos (EACCES fix)
- 📁 Sistema de fallback automático a directorio temporal
- 💪 Aplicación resiliente que funciona siempre
- 🏥 Healthcheck mejorado compatible con Portainer

📦 ARCHIVOS PROCESAMIENTO:
- 🐍 Script Python para procesar PDF original (process_haizea_chart.py)
- 🔄 Rotación automática de tabla y cálculo de escala de meses
- 📊 Configuración JSON con posiciones precisas
- 🖼️ Imágenes optimizadas para representación gráfica

🐳 DOCKER & PORTAINER:
- ✅ Fix completo para estado 'unhealthy' en Portainer
- 📋 docker-compose-portainer.yml específico para Portainer
- 🚀 Script de inicio inteligente (start.sh)
- 📝 Documentación completa de resolución de problemas

📚 DOCUMENTACIÓN:
- MEJORA_GRAFICA_IMPLEMENTADA.md - Gráfica original
- MEJORAS_ADICIONALES_IMPLEMENTADAS.md - UI y funcionalidad
- SOLUCION_PERMISOS_PORTAINER.md - Fix Docker/Portainer

🎯 RESULTADO: Aplicación 100% funcional, resiliente y lista para producción

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,9 +24,9 @@ services:
     mem_reservation: 256m
     cpus: 2.0
     
-    # Volúmenes para persistir datos
+    # Volúmenes para persistir datos con permisos correctos
     volumes:
-      - ./data:/app/data
+      - haizea-data:/app/data
       - ./logs:/app/logs
     
     # Red personalizada
